--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div id="slot2"></div>
             <div id="slot3"></div>
         </div>
-        <h3>Get matching numbers WIN!</h3>
+        <h3>Get matching numbers to WIN!</h3>
         <p>Wallet Balance: $<span id="wallet"></span></p>
         <div>
             <button id="min">Place Min Bet $1</button>
